--- a/CSS/media.css
+++ b/CSS/media.css
@@ -50,7 +50,12 @@
   .header {
     margin: 0rem 2rem 0 2rem;
   }
-
+  .titre {
+    margin: 0rem 2rem 0 2rem;
+  }
+  .information {
+    margin: 0rem 2rem 0 2rem;
+  }
   /**************************form********************************/
   .recherche {
     grid-area: filters;
@@ -232,7 +237,7 @@
     background-color: #f2f2f2;
     border-radius: 10px;
     border: 1px #f2f2f2 solid;
-    margin: 2.5rem;
+    margin: 1rem;
   }
   .hebergement span {
     align-self: center;
@@ -245,7 +250,7 @@
   .trend {
     border-radius: 10px;
     border: 1px #f2f2f2 solid;
-    margin: 2.5rem;
+    margin: 0 1rem 0 1rem;
   }
 
   .trend__title {
