--- a/CSS/media.css
+++ b/CSS/media.css
@@ -175,34 +175,35 @@
   .activity__article {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(10, 2rem);
-    grid-gap: 1rem;
+    grid-template-rows: repeat(9, 1rem);
+    grid-gap: 2rem;
+    /*row-gap: 2rem;*/
     margin-bottom: 1rem;
   }
 
   .activity__article :nth-child(1) {
-    grid-row: 1/11;
+    grid-row: 1/10;
     grid-column: 1;
   }
 
   .activity__article :nth-child(2) {
-    grid-row: 1/7;
+    grid-row: 1/6;
     grid-column: 2;
   }
   .activity__article :nth-child(3) {
-    grid-row: 7/11;
+    grid-row: 6/10;
     grid-column: 2;
   }
   .activity__article :nth-child(4) {
-    grid-row: 1/11;
+    grid-row: 1/10;
     grid-column: 3;
   }
   .activity__article :nth-child(5) {
-    grid-row: 1/6;
+    grid-row: 1/5;
     grid-column: 4;
   }
   .activity__article :nth-child(6) {
-    grid-row: 6/11;
+    grid-row: 5/10;
     grid-column: 4;
   }
 
